# he-weather-bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.private  HOW_IT_WORKS.md  LICENSE  Makefile  Pipfile  Procfile  Procfile.windows  README.md  __init__.py  app.json  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt  weather_forecast.py  weather_forecast_cron.py  weather_forecast_invoke.py
.github/workflows/: main.yml
telegram_bot/: Dockerfile  app.py  dependencies.py  requirements.txt  settings.py  telegram_bot.py
telegram_bot/biz/: message.py
telegram_bot/common/intergration/: __init__.py  base_weather_client.py  he_weather_client.py  wttr_weather_client.py
telegram_bot/controllers/: cron.py  meta.py  release.py  webhook.py
telegram_bot/controllers/scheduler/: __init__.py  job.py
telegram_bot/core/service/: heweather.py  message.py  utils.py
telegram_bot/cron/: __init__.py  biz_weather.py  cron.py  jobs.py  tasks.py
telegram_bot/database/: crud.py  database.py  models.py  schemas.py
telegram_bot/intergration/: __init__.py  base_weather_client.py  exceptions.py  he_weather_client.py  http.py
telegram_bot/intergration/dingding/: dingbot.py
telegram_bot/intergration/http/: base_http_client.py  httpx_client.py  request_http_client.py
telegram_bot/intergration/location/: he_location_client.py
telegram_bot/intergration/weather/: base_weather_client.py  const.py  he_weather_client.py  wttr_weather_client.py
telegram_bot/intergration/weather/models/: he_weather_model.py  warn_model.py
telegram_bot/routers/: cron.py  meta.py  release.py  webhook.py
telegram_bot/scheduler/: __init__.py  job.py  jobs.py
telegram_bot/service/: __init__.py  dingtalk.py  message.py  message_service.py  telegram.py
telegram_bot/telegram/: __init__.py  add_location.py  add_qweather_api_key.py  bot.py  callbacks.py  dispatcher.py  exception.py  finite_state_machine.py  update_dingbot.py  update_location.py
telegram_bot/telegram/biz/: weather.py
telegram_bot/telegram/components/: keyboard_markup_factory.py
telegram_bot/telegram/keyboard/: keyboard_markup_factory.py
telegram_bot/telegram/models/: keyboard_markup_factory.py
telegram_bot/telegram/service/: message.py
telegram_bot/tests/: test_app.py  test_ding_client.py  test_weather_client.py  test_weather_warning.py
telegram_bot/util/: date_util.py  retry_util.py
telegram_bot/utils/: date_util.py  exceptions.py  retry_util.py
tests/: main.py  test_app.py  test_weather_client.py
util/: __init__.py
