[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["Henry Zhu <daya0576@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
sqlalchemy = "^1.3.23"
requests = "^2.25.1"
aiogram = "^2.11.2"
uvicorn = "^0.13.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"