[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["Henry Zhu <daya0576@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
sqlalchemy = "^1.3.23"
requests = "^2.25.1"
aiogram = "^2.11.2"
uvicorn = "^0.13.3"
psycopg2 = "^2.9.5"
aioredis = "^1.3.1"
sentry-sdk = "^0.20.3"
loguru = "^0.5.3"
pytest = "^6.2.2"
requests-futures = "^1.0.0"
httpx = "^0.17.0"
aiocache = "^0.11.1"
apscheduler = "^3.7.0"
redis = "^3.5.3"
msgpack = "^1.0.2"
ujson = "^4.0.2"
syncer = "^1.3.0"
retry = "^0.9.2"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
