[project]
name = "telegram_bot"
version = "0.3.0"
description = ""
authors = [{ name = "Henry Zhu", email = "daya0576@gmail.com" }]
requires-python = "~=3.9"
dependencies = [
    "fastapi>=0.79.0,<0.80",
    "sqlalchemy>=1.3.23,<2",
    "requests>=2.25.1,<3",
    "aiogram>=2.11.2,<3",
    "uvicorn>=0.13.3,<0.14",
    "aioredis>=1.3.1,<2",
    "loguru>=0.5.3,<0.6",
    "pytest>=6.2.2,<7",
    "requests-futures>=1.0.0,<2",
    "httpx>=0.17.0,<0.18",
    "aiocache>=0.11.1,<0.12",
    "apscheduler>=3.7.0,<4",
    "redis>=3.5.3,<4",
    "msgpack>=1.0.2,<2",
    "ujson>=4.0.2,<5",
    "syncer>=1.3.0,<2",
    "retry>=0.9.2,<0.10",
    "pytest-mock>=3.7.0,<4",
    "pytest-asyncio>=0.18.3,<0.19",
    "python-dotenv>=0.20.0,<0.21",
    "tenacity>=8.2.2,<9",
    "sentry-sdk[fastapi]>=1.32.0,<2",
    "psycopg2>=2.9.9,<3",
]

[dependency-groups]
dev = [
    "pyngrok>=6.0.0,<7",
    "sqlalchemy-stubs>=0.4,<0.5",
]

[tool.uv]

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
